[gd_scene load_steps=5 format=3]

[ext_resource type="Script" path="res://scenes/ui/HeroSelect.gd" id="1_script"]
[ext_resource type="Script" path="res://scenes/ui/BackgroundLayer.gd" id="2_background"]
[ext_resource type="Script" path="res://scenes/ui/ParticleLayer.gd" id="3_particles"]
[ext_resource type="AudioStream" path="res://audio/hero_gallery.ogg" id="4_audio"]

[node name="HeroSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="BackgroundLayer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_background")

[node name="ParticleLayer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_particles")

[node name="GalleryMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_audio")

[node name="MainVBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="TopBar" type="PanelContainer" parent="MainVBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 110)

[node name="TopMargin" type="MarginContainer" parent="MainVBox/TopBar"]
layout_mode = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 8

[node name="ContentHBox" type="HBoxContainer" parent="MainVBox/TopBar/TopMargin"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="StatsPanel" type="PanelContainer" parent="MainVBox/TopBar/TopMargin/ContentHBox"]
layout_mode = 2
custom_minimum_size = Vector2(220, 0)

[node name="StatsMargin" type="MarginContainer" parent="MainVBox/TopBar/TopMargin/ContentHBox/StatsPanel"]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 6

[node name="StatsVBox" type="VBoxContainer" parent="MainVBox/TopBar/TopMargin/ContentHBox/StatsPanel/StatsMargin"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="StatsTitle" type="Label" parent="MainVBox/TopBar/TopMargin/ContentHBox/StatsPanel/StatsMargin/StatsVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 13
text = "STATS"
theme_override_colors/font_color = Color(0.95, 0.78, 0.25, 1)

[node name="StatsContainer" type="VBoxContainer" parent="MainVBox/TopBar/TopMargin/ContentHBox/StatsPanel/StatsMargin/StatsVBox"]
layout_mode = 2
theme_override_constants/separation = 3

[node name="TitleSpacer" type="Control" parent="MainVBox/TopBar/TopMargin/ContentHBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TitleVBox" type="VBoxContainer" parent="MainVBox/TopBar/TopMargin/ContentHBox"]
layout_mode = 2
theme_override_constants/separation = 2
alignment = 1

[node name="Title" type="Label" parent="MainVBox/TopBar/TopMargin/ContentHBox/TitleVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "SELECT YOUR HERO"
horizontal_alignment = 1

[node name="Subtitle" type="Label" parent="MainVBox/TopBar/TopMargin/ContentHBox/TitleVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Choose your hero for the arena"
horizontal_alignment = 1

[node name="RoleSpacer" type="Control" parent="MainVBox/TopBar/TopMargin/ContentHBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RolePanel" type="PanelContainer" parent="MainVBox/TopBar/TopMargin/ContentHBox"]
layout_mode = 2
custom_minimum_size = Vector2(240, 0)

[node name="RoleMargin" type="MarginContainer" parent="MainVBox/TopBar/TopMargin/ContentHBox/RolePanel"]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 6

[node name="RoleVBox" type="VBoxContainer" parent="MainVBox/TopBar/TopMargin/ContentHBox/RolePanel/RoleMargin"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="RoleTitle" type="Label" parent="MainVBox/TopBar/TopMargin/ContentHBox/RolePanel/RoleMargin/RoleVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 13
text = ""

[node name="RoleDesc" type="Label" parent="MainVBox/TopBar/TopMargin/ContentHBox/RolePanel/RoleMargin/RoleVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = ""
autowrap_mode = 2

[node name="CarouselPanel" type="PanelContainer" parent="MainVBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="CarouselMargin" type="MarginContainer" parent="MainVBox/CarouselPanel"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 8

[node name="ScrollContainer" type="ScrollContainer" parent="MainVBox/CarouselPanel/CarouselMargin"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0
vertical_scroll_mode = 1

[node name="CenterContainer" type="CenterContainer" parent="MainVBox/CarouselPanel/CarouselMargin/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HeroGrid" type="GridContainer" parent="MainVBox/CarouselPanel/CarouselMargin/ScrollContainer/CenterContainer"]
layout_mode = 2
theme_override_constants/h_separation = 16
theme_override_constants/v_separation = 20
columns = 6

[node name="BottomBar" type="PanelContainer" parent="MainVBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 80)

[node name="BottomMargin" type="MarginContainer" parent="MainVBox/BottomBar"]
layout_mode = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 10

[node name="BottomHBox" type="HBoxContainer" parent="MainVBox/BottomBar/BottomMargin"]
layout_mode = 2
alignment = 1

[node name="PlayButton" type="Button" parent="MainVBox/BottomBar/BottomMargin/BottomHBox"]
layout_mode = 2
custom_minimum_size = Vector2(360, 60)
theme_override_font_sizes/font_size = 24
text = "PLAY MATCH"

[connection signal="pressed" from="MainVBox/BottomBar/BottomMargin/BottomHBox/PlayButton" to="." method="_on_play_pressed"]
